hphp/hack/test/decl/qualified_name_in_attribute_arg.php
<?hh

<<Foo(Bar\Baz::class)>>
function f(): void {}
